--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             <div class="collapse navbar-collapse" id="navcol-1"
                 style="margin-top: 15px;margin-bottom: -4px;margin-right: 7px;font-family: Poppins, sans-serif;">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
-                    <li class="nav-item"><a class="nav-link" href="market.html">Our Market</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="location.html">Location</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html" style="color:black"><b>Home</a></b></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html" style="color:black"><b>About Us</a></b></li>
+                    <li class="nav-item"><a class="nav-link" href="products.html" style="color:black"><b>Products</a></b></li>
+                    <li class="nav-item"><a class="nav-link" href="market.html" style="color:black"><b>Our Market</a></b></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html" style="color:black"><b>Contact Us</a></b></li>
+                    <li class="nav-item"><a class="nav-link" href="location.html" style="color:black"><b>Location</a></b></li>
                 </ul>
             </div>
         </div>
