--- a/location.html
+++ b/location.html
@@ -29,30 +29,22 @@
             <div class="collapse navbar-collapse" id="navcol-1"
                 style="margin-top: 15px;margin-bottom: -4px;margin-right: 7px;font-family: Poppins, sans-serif;">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
-                    <li class="nav-item"><a class="nav-link" href="market.html">Our Market</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="location.html">Location</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html" style="color:black"><b>Home</a></b></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html" style="color:black"><b>About Us</a></b></li>
+                    <li class="nav-item"><a class="nav-link" href="products.html" style="color:black"><b>Products</a></b></li>
+                    <li class="nav-item"><a class="nav-link" href="market.html" style="color:black"><b>Our Market</a></b></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html" style="color:black"><b>Contact Us</a></b></li>
+                    <li class="nav-item"><a class="nav-link" href="location.html" style="color:black"><b>Location</a></b></li>
                 </ul>
             </div>
         </div>
     </nav>
     <section style="margin-top: -159px;background: linear-gradient(rgb(194,176,159) 3%, rgb(194,176,159) 100%);">
         <div class="bg-white" style="padding-top: 60px;padding-bottom: 30px;background: linear-gradient(rgb(194,176,159) 3%, white 33%, rgb(255,255,255) 71%, rgb(194,176,159) 100%);">
-<<<<<<< HEAD
-            <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="text-uppercase section-heading">About Us</h2>
-                    <h3 class="section-subheading text-muted">We want you to know us well before we serve you!</h3>
-=======
             <div class="container" style="padding-bottom: 10px;background: linear-gradient(rgb(194,176,159) 3%, rgb(194,176,159) 100%);">
                 <div class="text-center">
                     <h4 style="color: #23295f;font-size: 45px;margin-top: 15px;font-family: Poppins, sans-serif;"><strong>Our Location</strong></h4>
                     <hr style="border-color: rgb(0,0,0);width: 121px;">
->>>>>>> f60d264900b79d64cd392edd7e8d3c9b3d2e3fb7
                 </div>
             </div>
                 <div class="row" style="margin-top: 44px;">
