--- a/contact.html
+++ b/contact.html
@@ -4,121 +4,97 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Sanrax Global- Contact</title>
+    <title>Home - Brand</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Barlow:300,400,500,600,700,900,900i">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Courgette">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/css/Contattigmap.css">
+    <link rel="stylesheet" href="assets/css/Contact-form.css">
     <link rel="stylesheet" href="assets/css/dh-row-text-image-right-responsive.css">
+    <link rel="stylesheet" href="assets/css/ebs-contact-form-1.css">
+    <link rel="stylesheet" href="assets/css/ebs-contact-form.css">
     <link rel="stylesheet" href="assets/css/footer-ultimate.css">
     <link rel="stylesheet" href="assets/css/gradient-navbar-1.css">
     <link rel="stylesheet" href="assets/css/gradient-navbar.css">
     <link rel="stylesheet" href="assets/css/Map-Location-5.css">
-    <link rel="stylesheet" href="assets/css/Modern-Contact-Form.css">
 </head>
 
 <body id="page-top" style="margin-top: 15px;">
     <nav class="navbar navbar-dark navbar-expand-md" id="app-navbar" style="margin-bottom: 5px;margin-top: 5px;padding-top: 0px;padding-right: 26px;padding-bottom: 23px;background: linear-gradient(rgb(0,160,137), rgb(2,113,89));">
         <div class="container-fluid"><a class="navbar-brand" href="#" style="padding-top: 0px;margin-top: 8px;"></a>
-            <h1 style="margin-bottom: -20px;font-family: Poppins, sans-serif;color: #ffffff;font-size: 30px;">Sanrax Global&nbsp;</h1><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <h1 style="margin-bottom: -20px;font-family: Courgette, cursive;color: #ffffff;font-size: 30px;">Sanrax Global&nbsp;</h1><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1"
                 style="margin-top: 15px;margin-bottom: -4px;margin-right: 7px;font-family: Poppins, sans-serif;">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html" style="color:black"><b>Home</a></b></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html" style="color:black"><b>About Us</a></b></li>
-                    <li class="nav-item"><a class="nav-link" href="products.html" style="color:black"><b>Products</a></b></li>
-                    <li class="nav-item"><a class="nav-link" href="market.html" style="color:black"><b>Our Market</a></b></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html" style="color:black"><b>Contact Us</a></b></li>
-                    <li class="nav-item"><a class="nav-link" href="location.html" style="color:black"><b>Location</a></b></li>
+                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Products</a></li>
+                </ul>
+                <ul class="nav navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="#">Our Market</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Location</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <section id="portfolio" class="bg-light" style="margin-bottom: -76px;margin-top: -32px;background: linear-gradient(rgb(194,176,159) 3%, white 33%, rgb(255,255,255) 71%, rgb(194,176,159) 100%);">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="text-uppercase section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Get in touch with our team!</h3>
-                </div>
+    <div class="container" id="info-container">
+        <div class="row">
+            <div class="col-md-12">
+                <h2 class="text-center text-info">Contact Us</h2>
             </div>
-                <form>
-                    <div class="form-row">
-                        <div class="col col-contact">
-                            <div class="form-group modern-form__form-group--padding-r"><input class="form-control input input-tr" type="text" placeholder="First Name">
-                                <div class="line-box">
-                                    <div class="line"></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col col-contact">
-                            <div class="form-group modern-form__form-group--padding-l"><input class="form-control input input-tr" type="text" placeholder="Email">
-                                <div class="line-box">
-                                    <div class="line"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <br>
-                    <br>
-                    <div class="col col-contact">
-                        <div class="form-group modern-form__form-group--padding-l"><input class="form-control input input-tr" type="int" placeholder="Mobile no.">
-                            <div class="line-box">
-                                <div class="line"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                    <div class="col col-contact">
-                        <div class="form-group modern-form__form-group--padding-l"><input class="form-control input input-tr" type="int" placeholder="Mobile no.">
-                            <div class="line-box">
-                                <div class="line"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                    <div class="form-row">
-                        <div class="col">
-                            <div class="form-group modern-form__form-group--padding-t"><textarea class="form-control input modern-form__form-control--textarea" placeholder="Message"></textarea>
-                                <div class="line-box">
-                                    <div class="line"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="col">
-                            <div class="form-group modern-form__form-group--padding-t"><textarea class="form-control input modern-form__form-control--textarea" placeholder="Product Enquiry"></textarea>
-                                <div class="line-box">
-                                    <div class="line"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="col text-center"><button class="btn btn-primary submit-now" type="submit" style="background: #059c87;">Submit Now</button></div>
-                    </div>
-                </form>
+            <div class="col-12 col-sm-6 col-md-6" id="contact-box">
+                <p id="contact-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel nam magnam natus tempora cumque, aliquam deleniti voluptatibus voluptas. Repellat vel, et itaque commodi iste ab, laudantium voluptas deserunt nobis. </p>
+                <div class="info-box"><i class="fa fa-map-marker my-info-icons"></i><span class="text-uppercase text-info">Address: </span><span>1010, Dover Road, #01-192V , Singapore - 139658</span></div>
+                <div class="info-box"><i class="fa fa-envelope my-info-icons"></i><span class="text-uppercase text-info">Email: </span><span>sales@sanraxglobal.org </span></div>
+                <div class="info-box"><i class="fa fa-phone-square my-info-icons"></i><span class="text-uppercase text-info">Phone: </span><span>+65 93809366</span></div>
             </div>
+            <div class="col-12 col-sm-6 col-md-6 site-form">
+                <form id="my-form">
+                    <div class="form-group"><label class="sr-only" for="firstname">First Name</label><input class="form-control" type="text" id="firstname" name="firstname" placeholder="Name" autofocus=""></div>
+                    <div class="form-group"><label class="sr-only" for="lastname">Last Name</label><input class="form-control" type="text" id="lastname" name="lastname" placeholder="Phone"></div>
+                    <div class="form-group"><label class="sr-only" for="phonenumber">Phone Number</label><input class="form-control" type="tel" id="phonenumber" name="phonenumber" required="" placeholder="Email"></div>
+                    <div class="form-group"><label class="sr-only" for="email">Email Address</label><input class="form-control" type="text" id="email" name="email" required="" placeholder="Product Enquiry"></div>
+                    <div class="form-group"><label class="sr-only" for="messages">Last Name</label><textarea class="form-control" name="messages" required="" placeholder="Message" rows="8"></textarea></div><button class="btn btn-light btn-lg" id="form-btn" type="submit">SEND </button></form>
+            </div>
+            <div class="clearfix"></div>
         </div>
-    </section>
-    <div class="footer-clean" style="background: linear-gradient(rgb(194,176,159) 3%, white 33%, rgb(255,255,255) 71%, rgb(194,176,159) 100%);">
+    </div>
+    <div class="footer-clean" style="background: rgb(255,255,255);">
         <footer>
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-3 item social"><img class="img-fluid footer-logo" style="height: 152px;width: 150px;" src="assets/img/Screenshot%202020-11-29%20211103.png"></div>
+                    <div class="col-sm-4 col-md-3 item-srv">
+                        <h3>Control menu</h3>
+                        <ul>
+                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=product/manufacturer">Producători</a></li>
+                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=account/voucher">Vouchere cadou</a></li>
+                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=affiliate/login">Afiliați</a></li>
+                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=product/special">Oferte speciale</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4 col-md-3 item-srv">
+                        <h3>INFORMATION</h3>
+                        <ul>
+                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=information/information&amp;information_id=6" style="background: rgba(255,0,0,0);">Address</a></li>
+                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=information/information&amp;information_id=3" style="background: rgba(255,0,0,0);">Privacy Policiy</a></li>
+                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=information/information&amp;information_id=5" style="background: rgba(255,0,0,0);">Terms And Conditions</a></li>
+                        </ul>
+                    </div>
                     <div class="col-sm-4 col-md-3 item">
                         <h3>Reach Us</h3>
                         <ul>
-                            <li class="despre-noi"><i class="fa fa-home despre-noi"></i>Address: </li>
-                            <li class="despre-noi"><i class="fa fa-envelope despre-noi"></i>Email: </li>
-                            <li class="despre-noi"><i class="fa fa-phone despre-noi"></i>Telephone: </li>
+                            <li class="despre-noi"><i class="fa fa-home despre-noi"></i>&nbsp; Address</li>
+                            <li class="despre-noi"><i class="fa fa-envelope despre-noi"></i>&nbsp;Email:</li>
+                            <li class="despre-noi"><i class="fa fa-phone despre-noi"></i>&nbsp;Telephone:</li>
                         </ul>
                         <ul></ul>
                     </div>
